[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/SofiaSansCondensed-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/tela deck/ActionButtonCarta.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0, 0.0949721 )
colors = PoolColorArray( 0.4, 0.4, 0.4, 1, 0.478431, 0.478431, 0.478431, 1, 0.0313726, 0, 0.172549, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="ActionButtonCarta" type="TextureButton"]
margin_right = 236.0
margin_bottom = 25.0
focus_mode = 0
button_mask = 2
enabled_focus_mode = 0
expand = true
stretch_mode = 2
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 0.725
margin_right = 65.525
margin_bottom = 25.0
texture = SubResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 233.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_constants/separation = 10

[node name="LabelQuantidade" type="Label" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="LabelNome" type="Label" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 233.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Alice Satter, A estrategista"

[connection signal="mouse_entered" from="." to="." method="_on_ActionButtonCarta_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ActionButtonCarta_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ActionButtonCarta_pressed"]
